[OpenID4VCI] Add support for mDoc (#48095)
Signed-off-by: Dominik Schlosser <dominik.schlosser@gmail.com>